# sullivanmm

./: MANIFEST.in  README.md  pyproject.toml
Sullivan_MM/: AlgebraPL.py  AplK.py  SimplicialAPL.py  utils.py
src/: AplK.py  SimplicialAPL.py  __init__.py  all.py  cochain_algebra_scomplex.py  cochain_algebra_ssets.py  hodge.py  utils.py
src/Sullivan_MM/: __init__.py
